fix: enlarge image and align to left index page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -793,11 +793,11 @@ form label {
         display: none;
     }
 
-    img{
+  /*img{
         max-width: 120%;
         max-height: 120%;
         display: block;
-    }
+    }*/
 
     /*Home Page Styling  */
     .bio {
@@ -822,9 +822,15 @@ form label {
     } 
     .band_pic img{
         float: left;
-        max-height: 400px;
-        max-width: 400px;
-        padding-left: 160px;
+        /*max-height: 400px;
+        max-width: 400px;*/
+
+        max-width: 550px !important; /*added important because without it my rule is being ignored */
+        max-height: 550px !important; /*added important because without it my rule is being ignored */
+
+        /*padding-left: 160px;*/
+        padding-left: 70px;
+
         object-fit: cover;
         border-right: 10px;
         padding-bottom: 50px;
@@ -834,6 +840,8 @@ form label {
     .gig-wrapper{
        padding-top: 1px;
        padding-left: 195px;
+       
+
        clear: both;
        padding-bottom: 50px;
    }
